Fix for blocks layout on mobile on home

--- a/wp-content/themes/redcross/src/sass/_pages.scss
+++ b/wp-content/themes/redcross/src/sass/_pages.scss
@@ -70,6 +70,7 @@
 	align-items: stretch;
 		
 	.col3 {
+		width: 100%;
 		margin-bottom: $gut;
 		flex: 1 0 auto;		
 	}
