--- a/wp-content/themes/redcross/src/sass/_posts.scss
+++ b/wp-content/themes/redcross/src/sass/_posts.scss
@@ -264,6 +264,11 @@
 			min-width: 120px;
 			text-align: center;
 		}
+		
+		margin-top: $gut;
+		@include for(medium-screens) {
+			margin-top: 0;
+		}
 	}
 }
 
